--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Srimt College</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <nav class="navbar background">
         <ul class="nav-list">
-            <div class="logo"><img src="img/img.jpg" alt="image errot"></div>
+            <div class="logo"><img src="img.jpg" alt="image errot"></div>
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#services">Services</a></li>
@@ -59,7 +59,7 @@
             Perspiciatis, earum ipsum perferendis a facilis necessitatibus ratione! Blanditiis, inventore veritatis
             libero eius dolorem numquam impedit voluptates eos!</p>
         <div class="thumbnail">
-            <img src="/img/img.jpg" alt="image error" class="imgFluid">
+            <img src="img.jpg" alt="image error" class="imgFluid">
         </div>
     </section>
 
